--- a/tests/integration/integration_config.yml
+++ b/tests/integration/integration_config.yml
@@ -1,3 +1,3 @@
 ---
 kubeconfig: "/root/.kube/config"
-cli_image: "quay.io/rhn-support-rjauhari/cli:v2-dev"
+cli_image: "registry-proxy.engineering.redhat.com/rh-osbs/service-interconnect-skupper-router-rhel9:3.2.0-1"
