--- a/tests/integration/targets/skupper_v2_install/defaults/main.yml
+++ b/tests/integration/targets/skupper_v2_install/defaults/main.yml
@@ -1,1 +1,1 @@
-skupper_v2_url: https://github.com/skupperproject/skupper/releases/download/v2-dev-release/skupper-cluster-scope.yaml
+skupper_v2_url: https://raw.githubusercontent.com/rajnish-jauhari/skupper-ansible/refs/heads/main/skupper-cluster-scope.yaml
