--- a/tests/integration/targets/token/defaults/main.yml
+++ b/tests/integration/targets/token/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-token_image: "{{ cli_image | default('quay.io/skupper/cli:v2-dev') }}"
+token_image: "{{ cli_image | default('registry-proxy.engineering.redhat.com/rh-osbs/service-interconnect-cli-rhel9:2.0.0-2') }}"
 namespace: "" # noqa: var-naming
 namespace_west: token-west-testing
 namespace_east: token-east-testing
