--- a/tests/integration/integration_config.yml
+++ b/tests/integration/integration_config.yml
@@ -1,3 +1,4 @@
 ---
 kubeconfig: "/root/.kube/config"
 cli_image: "registry-proxy.engineering.redhat.com/rh-osbs/service-interconnect-cli-rhel9:2.0.0-2"
+skupper_v2_install: false
